<resources>
    <string name="app_name">Trivia App</string>
    <string name="username">UserName</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="next">Next</string>
    <string name="history">History</string>
    <string name="question1">Who is the best cricketer in the world?</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>
    <string name="virat_kolli">Virat Kolli</string>
    <string name="adam_gilchirst">Adam Gilchirst</string>
    <string name="jacques_kallis">Jacques Kallis</string>
    <string name="white">White</string>
    <string name="question2">What are the colors in the Indian national flag?</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="question">Question</string>
    <string name="hello">Hello</string>
    <string name="finish">Finish</string>
    <string name="name">Name</string>
    <string name="no_data">no data</string>
    <string name="you_can_not_complete_test">You can not finish test</string>
    <string name="history_data">History Data</string>
    <string name="summary">Summary</string>
</resources>