<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardQuestion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="8dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQuestion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:text="@string/question1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <RadioGroup
                android:id="@+id/rgbCricketer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvQuestion1"
                android:layout_marginLeft="8dp">

                <RadioButton
                    android:id="@+id/rdSachin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sachin_tendulkar"/>
                <RadioButton
                    android:id="@+id/rdVirat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/virat_kolli"/>

                <RadioButton
                    android:id="@+id/rdAdam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adam_gilchirst"/>

                <RadioButton
                    android:id="@+id/rdJacques"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jacques_kallis"/>
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>